# langchain_rag_demo

./: DEPLOYMENT_SUMMARY.md  DOCKER_GUIDE.md  Dockerfile  HYBRID_SEARCH_GUIDE.md  PROMPT_REFACTOR_SUMMARY.md  README.md  USAGE_GUIDE.md  api_server.py  api_usage_examples.py  app.py  async_main.py  demo_chunk_id.py  demo_chunk_metadata.py  demo_file_info.py  demo_hash_comparison.py  demo_runtime_prompt_update.py  demo_short_term_memory.py  demo_text_splitter.py  demo_textloader.py  demo_vectorization.py  docker-compose.yml  generate_project_overview.py  main.py  nginx.conf  project_overview.md  prompt_management_api.py  pyproject.toml  quick_api_test.py  requirements.txt  run_tests.py  sse_api_server.py  start_server.py  streaming_main.py  streaming_web_demo.py  test_api_client.py  test_docker.py  test_enterprise_features.py  test_full_service.py  test_prompt_manager.py  verify_prompt_decoupling.py
data/: AI技术文档.txt  RAG系统介绍.txt  initial_doc.txt  product_A.txt  product_B.txt  service_C.txt  产品介绍.txt  使用指南.txt  技术文档.txt  数据库技术.txt  编程语言对比.txt
demo_vector_store/: chroma.sqlite3
examples/: async_vs_threading_explanation.py  concurrency_levels_explanation.py  concurrent_batch_streaming.py  production_streaming.py  real_llm_streaming.py  real_streaming_implementation.py  run_in_executor_explanation.py  streaming_web_demo.py  test_all_streaming_fixes.py  test_async_retrieval.py  test_concurrent_batch.py  test_real_streaming.py  test_true_streaming_fix.py  websocket_performance_test.py
my_chromadb_vector_store/: chroma.sqlite3
rag/: async_pipeline.py  config.py  (+4 more)
(+17 files in other folders)
